feat: 개선된 템플릿 및 API 설정, 사용자 요청 처리 로직 수정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,6 +20,9 @@ spring:
     restart:
       enabled: true     # 자동 재시작 활성화
 
+  thymeleaf:
+    cache: false        # 개발 환경 템플릿 캐시 비활성화
+
 # 개발 환경 로깅 설정 - 루트 프로파일에서 상속
 logging:
   level:
