--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,16 @@
-# Project Version (managed by release plugin - DO NOT EDIT MANUALLY)
 version=1.3.1
-# Gradle Performance Settings
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-org.gradle.parallel=true
-org.gradle.caching=true
+# Project Metadata
+projectGroup=Bunny Holes
+group=bunny
+description=Spring Boot based board system - Board Hole
+githubUrl=https://github.com/BunnyHoles/board-hole
+contactEmail=bunny@xiyo.dev
+contactName=Bunny Developer
+
+# API Documentation
+apiTitle=Board-Hole API
+apiTermsOfService=https://boardhole.com/terms
+apiLicenseName=Apache 2.0
+apiLicenseUrl=https://www.apache.org/licenses/LICENSE-2.0
 # Note: For local development settings and sensitive credentials,
 # create a gradle-local.properties file (see gradle-local.properties.example)
