--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,3 +3,10 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
       - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
+
+# Disable Swagger/OpenAPI for tests
+springdoc:
+  api-docs:
+    enabled: false
+  swagger-ui:
+    enabled: false
