--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,32 +37,16 @@ management:
         enabled: true
       show-details: never
 
-# ========================================
-# SpringDoc OpenAPI 설정
-# ========================================
-springdoc:
-  api-docs:
-    path: /v3/api-docs
-    enabled: true
-  swagger-ui:
-    path: /swagger-ui/index.html
-    enabled: true
-    config-url: /v3/api-docs/swagger-config
-    url: /v3/api-docs
-    display-request-duration: true
-    display-operation-id: true
 
 # ========================================
 # 애플리케이션 도메인 설정
 # ========================================
 boardhole:
-  # 성능 임계값
-  performance:
-    logging:
-      fast-threshold-ms: 100
-      normal-threshold-ms: 500
-      slow-threshold-ms: 1000
-      duration-threshold-ms: 1000
+  # 로깅 성능 임계값
+  logging:
+    performance:
+      fast-threshold: 100
+      normal-threshold: 500
   
   # CORS 기본값 (환경별 프로필에서 오버라이드 권장)
   cors:
