feat: Release-Please 기반 CI/CD 파이프라인 구축
- Google Release-Please로 전환 (Zero-Config)
- GitHub Actions 워크플로우 단순화
  - release.yml: main 브랜치 자동 릴리스
  - test.yml: develop 브랜치 테스트 (Testcontainers)
- Docker 설정 최적화
  - Dockerfile: 불필요한 도구 제거
  - docker-compose.dev.yml: 로컬 개발용
- Semantic-Release 관련 파일 제거

BREAKING CHANGE: 버저닝 시스템이 Semantic-Release에서 Release-Please로 변경됨

--- a/build.gradle
+++ b/build.gradle
@@ -147,3 +147,8 @@ processResources {
         expand(project.properties)
     }
 }
+
+// JAR 파일 이름에 버전 포함
+bootJar {
+    archiveFileName = "${project.name}-${project.version}.jar"
+}
