--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,10 @@
   "release-type": "simple",
   "packages": {
     ".": {
-      "extra-files": ["gradle.properties"]
+      "extra-files": ["gradle.properties"],
+      "include-v-in-tag": false,
+      "release-as": "1.3.1"
     }
-  }
+  },
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
