chore: 코드 변경 시에만 테스트 실행하도록 최적화
- src, build.gradle 등 코드 관련 파일 변경 시에만 테스트 실행
- 문서나 설정 파일만 변경된 경우 테스트 건너뜀
- CI 리소스 절약 및 빌드 시간 단축

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,13 @@ name: Test
 on:
   push:
     branches: [develop]
+    paths:
+      - 'src/**'
+      - 'build.gradle'
+      - 'gradle.properties'
+      - 'settings.gradle'
+      - 'gradle/**'
+      - '.github/workflows/test.yml'
 
 jobs:
   test:
