--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,8 @@
     ".": {
       "extra-files": ["gradle.properties"],
       "include-v-in-tag": false,
-      "release-as": "1.3.1"
+      "release-as": "1.3.1",
+      "changelog-type": "github"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
