--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,64 +3,85 @@ name: Release
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
 permissions:
   contents: write
-  pull-requests: write
   packages: write
 
+env:
+  VERSION_FILE: gradle.properties
+
 jobs:
-  release-please:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-      tag_name: ${{ steps.release.outputs.tag_name }}
-      
     steps:
-      - uses: googleapis/release-please-action@v4
-        id: release
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: simple
-          
       - uses: actions/checkout@v5
-        if: steps.release.outputs.release_created
-        
+
       - name: Setup Java
-        if: steps.release.outputs.release_created
         uses: actions/setup-java@v5
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '21'
           cache: gradle
-          
-      - name: Build JAR
-        if: steps.release.outputs.release_created
+
+      - name: Build project
         run: |
           chmod +x gradlew
           ./gradlew clean build bootJar --no-daemon
-          
-      - name: Upload JAR to Release
-        if: steps.release.outputs.release_created
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: build/libs/*.jar
+
+  release:
+    if: github.event_name == 'push'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Java
+        uses: actions/setup-java@v5
+        with:
+          distribution: temurin
+          java-version: '21'
+          cache: gradle
+
+      - name: Build release JAR
+        run: |
+          chmod +x gradlew
+          ./gradlew bootJar --no-daemon
+
+      - name: Read version
+        id: version
+        run: |
+          VERSION=$(grep '^version=' "$VERSION_FILE" | cut -d'=' -f2)
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.version.outputs.version }}
+          name: Release ${{ steps.version.outputs.version }}
+          files: build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ steps.release.outputs.tag_name }} build/libs/*.jar --clobber
-          
+
       - name: Set up Docker Buildx
-        if: steps.release.outputs.release_created
         uses: docker/setup-buildx-action@v3
-        
-      - name: Log in to GitHub Container Registry  
-        if: steps.release.outputs.release_created
+
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Build and push Docker image
-        if: steps.release.outputs.release_created
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -68,6 +89,12 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/boardhole:latest
-            ghcr.io/${{ github.repository_owner }}/boardhole:${{ steps.release.outputs.tag_name }}
+            ghcr.io/${{ github.repository_owner }}/boardhole:${{ steps.version.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Publish build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-artifacts
+          path: build/libs/*.jar
