--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,12 @@ name: Test
 on:
   push:
     branches: [develop]
+    paths:
+      - 'src/**'
+  pull_request:
+    branches: [develop]
+    paths:
+      - 'src/**'
 
 jobs:
   test:
