fix: Docker 이미지 태그를 동적으로 소문자 처리
- github.repository 변수 사용 (자동으로 소문자 제공)
- 하드코딩 대신 동적 처리로 유지보수성 향상

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,8 +88,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/boardhole:latest
-            ghcr.io/${{ github.repository_owner }}/boardhole:${{ steps.version.outputs.version }}
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ steps.version.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
