--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,23 @@
 version=1.5.1
-# Project Metadata
-projectGroup=Bunny Holes
-group=bunny
-description=Spring Boot based board system - Board Hole
-githubUrl=https://github.com/BunnyHoles/board-hole
-contactEmail=bunny@xiyo.dev
-contactName=Bunny Developer
 
-# API Documentation
+# Core project metadata
+projectGroup=Bunnyholes
+group=dev.xiyo.boardhole
+description=Spring Boot based board system - Board Hole
+contactName=XIYO
+contactEmail=contact@xiyo.dev
+
+# Repository / release metadata
+githubUrl=https://github.com/Bunnyholes/board-hole
+jreleaser.owner=Bunnyholes
+jreleaser.repo=board-hole
+jreleaser.changelogPreset=conventional-commits
+
+# OpenAPI documentation metadata
 apiTitle=Board-Hole API
 apiTermsOfService=https://boardhole.com/terms
 apiLicenseName=Apache 2.0
 apiLicenseUrl=https://www.apache.org/licenses/LICENSE-2.0
+
 # Note: For local development settings and sensitive credentials,
 # create a gradle-local.properties file (see gradle-local.properties.example)
