--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,109 +1,73 @@
 name: Release
 
 on:
-  push:
-    branches: [ main ]
-
-permissions:
-  contents: write
-  packages: write
-
-env:
-  VERSION_FILE: gradle.properties
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (ex: 1.6.0)'
+        required: true
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.version }}
-    steps:
-      - uses: actions/checkout@v5
+    permissions:
+      contents: write
+      packages: write
+      discussions: write
 
-      - name: Setup Java
+    env:
+      VERSION: ${{ github.event.inputs.version }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Set up Java
         uses: actions/setup-java@v5
         with:
           distribution: temurin
           java-version: '21'
-          cache: gradle
 
-      - name: Build JAR
-        run: |
-          chmod +x gradlew
-          ./gradlew clean bootJar -x test --no-daemon
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
 
-      - name: Read version
-        id: version
-        run: |
-          VERSION=$(grep '^version=' "$VERSION_FILE" | cut -d'=' -f2)
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+      - name: Build & Test
+        run: ./gradlew clean build
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: jar-artifact
-          path: build/libs/*.jar
-          retention-days: 1
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: jar-artifact
-          path: build/libs
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ needs.build.outputs.version }}
-          name: Release ${{ needs.build.outputs.version }}
-          files: build/libs/*.jar
+      - name: Run JReleaser
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew jreleaserFullRelease -PreleaseVersion=${VERSION}
 
-  docker:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
+      - name: Prepare release notes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release view v${VERSION} --json body -q .body > RELEASE_NOTES.md
 
-      - name: Download JAR artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: jar-artifact
-          path: build/libs
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=raw,value=latest
-            type=raw,value=${{ needs.build.outputs.version }}
-
-      - name: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push multi-arch image
+        run: |
+          SUMMARY=$(tr '\n' ' ' < RELEASE_NOTES.md | cut -c1-1800 | sed 's/"/\\"/g')
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -f Dockerfile.cicd \
+            -t ghcr.io/bunnyholes/board-hole:${VERSION} \
+            -t ghcr.io/bunnyholes/board-hole:latest \
+            --label org.opencontainers.image.version=${VERSION} \
+            --label org.opencontainers.image.description="${SUMMARY}" \
+            --push .
+
+      - name: Upload release notes as artifact
+        uses: actions/upload-artifact@v4
         with:
-          context: .
-          file: ./Dockerfile.cicd
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=${{ github.ref_name }}
-          cache-to: type=gha,scope=${{ github.ref_name }},mode=max
+          name: release-notes-${{ env.VERSION }}
+          path: RELEASE_NOTES.md
