refactor: 전체 브랜드명 'boardholes'로 통일 및 Docker 템플릿 추가
- 기존 `Boardholes`를 `boardholes`로 대체 (UI, 템플릿, 설정 파일, 테스트 등 전반적 적용)
- Docker 템플릿 파일 추가 (`Dockerfile.tpl`) 및 관련 JReleaser 설정 업데이트
- 릴리스 워크플로우 개선 (Docker 레지스트리 네임, 태그 수정)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,8 +60,8 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             -f Dockerfile.cicd \
-            -t ghcr.io/bunnyholes/board-hole:${VERSION} \
-            -t ghcr.io/bunnyholes/board-hole:latest \
+            -t ghcr.io/bunnyholes/boardhole:${VERSION} \
+            -t ghcr.io/bunnyholes/boardhole:latest \
             --label org.opencontainers.image.version=${VERSION} \
             --label org.opencontainers.image.description="${SUMMARY}" \
             --push .
