--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 version=1.5.1
 # Core project metadata
-projectGroup=Bunnyholes
+projectGroup=bunnyholes
 group=dev.xiyo.boardhole
-description=Spring Boot based board system - Boardholes
+description=Spring Boot based board system - boardholes
 contactName=XIYO
 contactEmail=contact@xiyo.dev
 # Repository / release metadata
-githubUrl=https://github.com/Bunnyholes/board-hole
-jreleaser.owner=Bunnyholes
-jreleaser.repo=board-hole
+githubUrl=https://github.com/bunnyholes/boardhole
+jreleaser.owner=bunnyholes
+jreleaser.repo=boardhole
 jreleaser.changelogPreset=conventional-commits
 # OpenAPI documentation metadata
 apiTitle=Board-Hole API
