--- a/META-INF/build-info.properties
+++ b/META-INF/build-info.properties
@@ -1,7 +1,7 @@
-build.artifact=board-hole
+build.artifact=boardhole
 build.contactEmail=bunny@xiyo.dev
 build.contactName=Bunny Developer
-build.githubUrl=https\://github.com/BunnyHoles/board-hole
+build.githubUrl=https\://github.com/bunnyholes/boardholes
 build.group=bunny
 build.name=board-hole
 build.projectDescription=Spring Boot \u00EA\u00B8\u00B0\u00EB\u00B0\u0098 \u00EA\u00B2\u008C\u00EC\u008B\u009C\u00ED\u008C\u0090 \u00EC\u008B\u009C\u00EC\u008A\u00A4\u00ED\u0085\u009C
