--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,15 @@
 version=1.5.1
+
 # Core project metadata
 projectGroup=bunnyholes
 group=dev.xiyo.boardhole
-description=Spring Boot based board system - boardholes
+description=Spring Boot based board system - boardhole
 contactName=XIYO
 contactEmail=contact@xiyo.dev
-# Repository / release metadata
 githubUrl=https://github.com/bunnyholes/boardhole
-jreleaser.owner=bunnyholes
-jreleaser.repo=boardhole
-jreleaser.changelogPreset=conventional-commits
+
 # OpenAPI documentation metadata
 apiTitle=Board-Hole API
 apiTermsOfService=https://boardhole.com/terms
 apiLicenseName=Apache 2.0
 apiLicenseUrl=https://www.apache.org/licenses/LICENSE-2.0
-# Note: For local development settings and sensitive credentials,
-# create a gradle-local.properties file (see gradle-local.properties.example)
