refactor: MySQL에서 PostgreSQL 17로 데이터베이스 마이그레이션
- MySQL 8.4에서 PostgreSQL 17-alpine으로 전환
- Docker Compose 설정 업데이트
- 의존성 변경 (mysql-connector → postgresql driver)
- Testcontainers PostgreSQL 모듈로 변경
- 문서 업데이트 (README, CLAUDE, AGENTS)

--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -1,18 +1,17 @@
 services:
-  mysql:
-    image: mysql:8.4
-    container_name: boardhole-mysql
+  postgres:
+    image: postgres:17-alpine
+    container_name: boardhole-postgres
     ports:
-      - "3306"
+      - "5432"
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: boardhole
-      MYSQL_USER: boardhole
-      MYSQL_PASSWORD: boardhole123
+      POSTGRES_USER: boardhole
+      POSTGRES_PASSWORD: boardhole123
+      POSTGRES_DB: boardhole
     volumes:
-      - mysql-data:/var/lib/mysql
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot" ]
+      test: [ "CMD-SHELL", "pg_isready -U boardhole -d boardhole" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -35,4 +34,4 @@ services:
 
 volumes:
   redis-data:
-  mysql-data:
+  postgres-data:
