--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:1.18.40"
 
     // -- Database Drivers --
-    runtimeOnly "com.mysql:mysql-connector-j:8.4.0"
+    runtimeOnly "org.postgresql:postgresql:42.7.4"
 
     // -- Logging (JSON encoder, opt-in in prod) --
     implementation "net.logstash.logback:logstash-logback-encoder:8.1"
@@ -82,7 +82,7 @@ dependencies {
 
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:mysql'
+    testImplementation 'org.testcontainers:postgresql'
 
 
     // -- RestAssured for E2E testing --
