--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,3 +107,19 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha,scope=${{ github.ref_name }}
           cache-to: type=gha,scope=${{ github.ref_name }},mode=max
+
+  deploy:
+    needs: docker
+    runs-on: ubuntu-latest
+    name: Deploy to Production Server
+    steps:
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd ~/Projects && docker compose up -d --pull always boardhole
+            echo "✅ Deployment completed at $(date)"
