fix: SSH 키 기반 인증으로 배포 방식 변경
- 패스워드 인증에서 SSH 키(id_ed25519) 인증으로 변경
- GitHub Secret SSH_KEY 사용

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,7 +119,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/Projects && docker compose up -d --pull always boardhole
             echo "✅ Deployment completed at $(date)"
