fix: Docker Compose 배포 스크립트 최적화
- `docker compose pull` 명령 추가로 변경된 레이어만 다운로드
- 배포 프로세스 간소화 및 불필요한 명령어 제거

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,5 +121,7 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/Projects && docker compose up -d --pull always boardhole
+            cd ~/Projects
+            docker compose pull boardhole  # 변경된 레이어만 다운로드
+            docker compose up -d boardhole
             echo "✅ Deployment completed at $(date)"
