--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
   docker:
     compose:
       file: docker-compose.infra.yml
+  
+  # MVC 설정
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true  # HTML 폼에서 PUT, DELETE 등의 HTTP 메서드 사용 가능
 
 # ========================================
 # 서버 전역 인코딩 설정
