--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@ apiTitle=Board-Hole API
 apiTermsOfService=https://boardhole.com/terms
 apiLicenseName=Apache 2.0
 apiLicenseUrl=https://www.apache.org/licenses/LICENSE-2.0
+
+# JVM and Gradle optimization settings
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+UseG1GC -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
