refactor: Board 뷰 컨트롤러 분리 및 에러 처리 개선
- BoardViewController를 목적별로 분리:
  - BoardListViewController: 게시글 목록 조회
  - BoardDetailViewController: 게시글 상세 조회
  - BoardDeleteViewController: 게시글 삭제 확인
- 에러 처리 기능 강화:
  - ViewControllerAdvice: 뷰 전용 예외 처리 추가
  - ErrorViewController: 공통 에러 뷰 컨트롤러 구현
  - 400 에러 페이지 템플릿 추가
- 메시지 국제화 개선:
  - 에러 관련 메시지 추가 (한국어, 영어)
- Thymeleaf 개발 및 디버그 설정 추가
- 각 컨트롤러에 대한 단위 테스트 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,16 @@ spring:
     hiddenmethod:
       filter:
         enabled: true  # HTML 폼에서 PUT, DELETE 등의 HTTP 메서드 사용 가능
+  
+  # Thymeleaf 설정 (개발 편의성 향상)
+  thymeleaf:
+    cache: false  # 개발 시 템플릿 캐시 비활성화 (hot reload 활성화)
+    prefix: classpath:/templates/  # 템플릿 위치
+    suffix: .html  # 템플릿 확장자
+    mode: HTML  # HTML5 모드
+    encoding: UTF-8
+    servlet:
+      content-type: text/html
 
 # ========================================
 # 서버 전역 인코딩 설정
