build(ci): align java 25 across release workflow and docker images

--- a/Dockerfile.cicd
+++ b/Dockerfile.cicd
@@ -1,5 +1,7 @@
 # CI/CD 전용 Dockerfile - 빌드 스테이지 없이 JAR만 복사
-FROM eclipse-temurin:21-jre-alpine
+
+# Runtime stage
+FROM azul/zulu-openjdk-alpine:25-jre
 
 # 보안을 위한 non-root 유저
 RUN addgroup -g 1000 spring && \
@@ -7,7 +9,7 @@ RUN addgroup -g 1000 spring && \
 
 WORKDIR /app
 
-# GitHub Actions artifact에서 다운로드된 JAR 복사
+# 애플리케이션 JAR 복사 (외부 artifact)
 COPY --chown=spring:spring build/libs/*.jar app.jar
 
 USER spring:spring
