refactor: 커스텀 로깅 시스템 제거 및 톰캣 로그로 전환
- 사용자 정의 로깅 시스템 완전 제거 (shared/config/log/ 디렉토리)
- RequestLoggingFilter, SecurityLoggingAspect, BusinessLogAspect 등 제거
- @EnableAsync를 @SpringBootApplication으로 이동
- 개발 환경에서 톰캣 액세스 로그 활성화
- 로깅 관련 의존성 정리

영향:
- 800+ 라인 코드 감소
- 단순화된 아키텍처
- 표준 로깅 방식으로 전환

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,6 +36,15 @@ server:
     include-binding-errors: always    # 바인딩 에러 포함
     include-stacktrace: on-param      # 파라미터 요청시 스택트레이스 포함
     include-exception: true           # 예외 정보 포함
+  
+  # 톰캣 Access Log (개발 환경에서만 활성화)
+  tomcat:
+    accesslog:
+      enabled: true
+      pattern: "%h %u %t \"%r\" %s %D"  # IP 사용자 시간 "요청" 상태코드 처리시간
+      directory: logs
+      prefix: access
+      suffix: .log
 
 # 개발 환경 애플리케이션 설정
 boardhole:
