✨ Java 버전 25에서 21로 변경 - release.yml: Java 버전 21로 수정 - Dockerfile: Java 버전 21로 수정 - Dockerfile.cicd: Java 버전 21로 수정 - README.md: Java 버전 21로 수정 - build.gradle: Java 버전 21로 수정 - docker-compose.yml: stop_grace_period 추가 - application.yml: graceful shutdown 활성화 및 actuator 헬스체크 추가

--- a/Dockerfile.cicd
+++ b/Dockerfile.cicd
@@ -1,7 +1,7 @@
 # CI/CD 전용 Dockerfile - 빌드 스테이지 없이 JAR만 복사
 
 # Runtime stage
-FROM azul/zulu-openjdk-alpine:25-jre
+FROM azul/zulu-openjdk-alpine:21-jre
 
 # 보안을 위한 non-root 유저
 RUN addgroup -g 1000 spring && \
@@ -15,6 +15,7 @@ COPY --chown=spring:spring build/libs/*.jar app.jar
 USER spring:spring
 
 EXPOSE 8080
+STOPSIGNAL SIGTERM
 
 # 런타임에 JAVA_OPTS와 SPRING_PROFILES_ACTIVE 환경변수 설정 가능
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
