--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -48,6 +48,9 @@ dependencies {
     // -- Session Management (Redis) --
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.session:spring-session-data-redis'
+
+    // -- Health & Monitoring --
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // -- API Documentation (SpringDoc) --
     // noinspection VulnerableLibrariesLocal
