--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       # BuildKit 활성화로 캐시 마운트 지원
       args:
         DOCKER_BUILDKIT: 1
+    stop_grace_period: 30s
     depends_on:
       postgres:
         condition: service_healthy
