feat: Java 버전을 25에서 21 LTS로 다운그레이드 (#45)
* docs: README에서 존재하지 않는 user 계정 정보 제거

- 실제로는 admin, anon 계정만 자동 생성됨
- user 계정은 설정에만 존재하고 DataInitializer에서 생성하지 않음
- 정확한 정보로 수정하여 사용자 혼란 방지

* docs: README에서 anon 계정 정보도 제거

- 관리자 계정(admin)만 사용자 대상 기본 계정으로 문서화
- anon 계정은 E2E 테스트 편의용으로 내부적으로 생성됨
- 사용자 문서에서는 관리자 계정만 안내하여 간소화

* refactor: anon과 regular 사용자 관련 모든 흔적 제거

- README.md: REGULAR_PASSWORD 환경변수 정보 제거
- application.yml: regular 사용자 설정 제거
- DefaultUsersProperties.java: regular 필드 제거
- DataInitializer.java: anon 사용자 생성 코드 제거
- AuthSteps.java: anon/regular 관련 상수 및 헬퍼 메서드 제거
- E2E 테스트: 동적 사용자 생성 방식으로 전환

이제 관리자(admin) 계정만 자동 생성되며,
테스트는 필요 시 동적으로 일반 사용자를 생성하는 방식으로 변경됨

* ✨ Java 버전 25에서 21로 변경
- release.yml: Java 버전 21로 수정
- Dockerfile: Java 버전 21로 수정
- Dockerfile.cicd: Java 버전 21로 수정
- README.md: Java 버전 21로 수정
- build.gradle: Java 버전 21로 수정
- docker-compose.yml: stop_grace_period 추가
- application.yml: graceful shutdown 활성화 및 actuator 헬스체크 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
 # 서버 전역 인코딩 설정
 # ========================================
 server:
+  shutdown: graceful  # Graceful Shutdown 활성화
   servlet:
     encoding:
       charset: UTF-8
@@ -55,11 +56,6 @@ boardhole:
       password: Admin123!  # 환경별로 오버라이드 권장 (정책 준수: 대/소문자+숫자+특수문자)
       name: 관리자
       email: admin@boardhole.com
-    regular:
-      username: user
-      password: User123!  # 환경별로 오버라이드 권장 (정책 준수)
-      name: 일반 사용자
-      email: user@boardhole.com
   api:
     title: ${apiTitle}
     version: ${version}
@@ -87,3 +83,16 @@ boardhole:
     license:
       name: ${apiLicenseName}
       url: ${apiLicenseUrl}
+
+# ========================================
+# Actuator 헬스체크
+# ========================================
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      probes:
+        enabled: true
